--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "kaissava-webapp",
+  "name": "minimal-bot",
   "version": "1.0.0",
-  "description": "Kaissava Arena Oyunu - Railway",
-  "main": "server.js",
+  "main": "bot.js",
   "scripts": {
-    "start": "node server.js"
-  },
-  "engines": {
-    "node": "18.x"
+    "start": "node bot.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "node-telegram-bot-api": "^0.61.0",
+    "dotenv": "^16.0.0"
   }
 }
